--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^11.18.1",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
